apply code recommendations